Add app blocking functionality and update project files

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,11 +7,12 @@
 
 # Memory settings for the Gradle Daemon
 # Increased to 4GB to improve build performance and prevent out-of-memory errors.
-org.gradle.jvmargs=-Xmx4g -Dfile.encoding=UTF-8 --add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED --add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-
+# Added stack size to prevent StackOverflowError during KSP processing
+org.gradle.jvmargs=-Xmx8g -Xss16m -Dfile.encoding=UTF-8
 # Memory settings for the Kotlin Daemon
-# Set to 4GB to handle annotation processing (KAPT) and Kotlin compilation.
-kotlin.daemon.jvmargs=-Xmx4g
+# Set to 2GB to handle Kotlin compilation and KSP annotation processing.
+# Added stack size to prevent StackOverflowError during KSP processing
+kotlin.daemon.jvmargs=-Xmx8g
 
 # Recommended Android X settings
 android.useAndroidX=true
@@ -32,6 +33,6 @@ org.gradle.caching=true
 # negatively impact build speed and may hide underlying issues. It's best to
 # try building without them first.
 #
-# kapt.num.threads=1
-# kapt.workers.incremental=false
-# org.gradle.parallel=false
+# KSP settings for better performance (KSP is more efficient than KAPT)
+ksp.incremental=true
+ksp.workers.isolation=false
