--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,19 @@
                 android:resource="@xml/content_aware_accessibility_config" />
         </service>
 
+        <!-- App Blocking Accessibility Service -->
+        <service
+            android:name=".service.AppBlockingService"
+            android:exported="true"
+            android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
+            <intent-filter>
+                <action android:name="android.accessibilityservice.AccessibilityService" />
+            </intent-filter>
+            <meta-data
+                android:name="android.accessibilityservice"
+                android:resource="@xml/app_blocking_accessibility_config" />
+        </service>
+
         <!-- Foreground Service for monitoring -->
         <service
             android:name=".service.MonitoringService"
